testing/runner/tests/snapshot_tests/setops/snapshots/setops__union-all-basic.snap
---
source: setops.sqltest
expression: "SELECT name, department FROM current_employees\n    UNION ALL\n    SELECT name, department FROM former_employees;"
info:
  statement_type: SELECT
  tables:
    - current_employees
    - former_employees
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN
`--COMPOUND QUERY
   |--LEFT-MOST SUBQUERY
   |  `--SCAN current_employees
   `--UNION ALL
      `--SCAN former_employees

BYTECODE
addr  opcode       p1  p2  p3  p4              p5  comment
   0  Init          0  14   0                   0  Start at 14
   1  OpenRead      0   2   0  k(4,B,B,B,B)     0  table=current_employees, root=2, iDb=0
   2  Rewind        0   7   0                   0  Rewind table current_employees
   3    Column      0   1   1                   0  r[1]=current_employees.name
   4    Column      0   2   2                   0  r[2]=current_employees.department
   5    ResultRow   1   2   0                   0  output=r[1..2]
   6  Next          0   3   0                   0
   7  OpenRead      1   3   0  k(5,B,B,B,B,B)   0  table=former_employees, root=3, iDb=0
   8  Rewind        1  13   0                   0  Rewind table former_employees
   9    Column      1   1   3                   0  r[3]=former_employees.name
  10    Column      1   2   4                   0  r[4]=former_employees.department
  11    ResultRow   3   2   0                   0  output=r[3..4]
  12  Next          1   9   0                   0
  13  Halt          0   0   0                   0
  14  Transaction   0   1   6                   0  iDb=0 tx_mode=Read
  15  Goto          0   1   0                   0
