testing/runner/tests/snapshot_tests/setops/snapshots/setops__union-all-with-order-by.snap
---
source: setops.sqltest
expression: "SELECT name, department, salary as compensation FROM current_employees\n    UNION ALL\n    SELECT name, department, last_salary as compensation FROM former_employees\n    ORDER BY compensation DESC;"
info:
  statement_type: SELECT
  tables:
    - current_employees
    - former_employees
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN


BYTECODE
