testing/runner/tests/snapshot_tests/setops/snapshots/setops__union-with-order-by.snap
---
source: setops.sqltest
expression: "SELECT name, department FROM current_employees\n    UNION\n    SELECT name, department FROM former_employees\n    ORDER BY department, name;"
info:
  statement_type: SELECT
  tables:
    - current_employees
    - former_employees
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN


BYTECODE
